RESOLVED FIXED125692
REGRESSION(r155784): [GTK] Some methods incorrectly removed in r155784 and deprecated in r158662
https://bugs.webkit.org/show_bug.cgi?id=125692
Summary REGRESSION(r155784): [GTK] Some methods incorrectly removed in r155784 and de...
Carlos Garcia Campos
Reported 2013-12-13 07:21:23 PST
In r155784 the build was fixed by skipping Console::profile() and Console::profileEnd(), but the patch also skipped other methods containing the profile method name. Those were incorrectly deprecated in r158662 thinking that the property had been removed in the idl.
Attachments
Patch (5.40 KB, patch)
2013-12-13 07:23 PST, Carlos Garcia Campos
mrobinson: review+
Carlos Garcia Campos
Comment 1 2013-12-13 07:23:34 PST
Carlos Garcia Campos
Comment 2 2013-12-13 07:38:12 PST
Note You need to log in before you can comment on or make changes to this bug.