Source/WebCore/bindings/gobject/WebKitDOMDeprecated.cpp
@@ -547,19 +547,6 @@ gdouble webkit_dom_html_media_element_get_initial_time(WebKitDOMHTMLMediaElement
     return 0;
 }
 
-// WebKitDOMHTMLHeadElement
-
-gchar* webkit_dom_html_head_element_get_profile(WebKitDOMHTMLHeadElement* self)
-{
-    g_warning("%s: the HeadElement object has been removed from WebKit, this function does nothing.", __func__);
-    return g_strdup("");
-}
-
-void webkit_dom_html_head_element_set_profile(WebKitDOMHTMLHeadElement* self, const gchar* value)
-{
-    g_warning("%s: the HeadElement object has been removed from WebKit, this function does nothing.", __func__);
-}
-
 // WebKitDOMProcessingInstruction
 
 gchar* webkit_dom_processing_instruction_get_data(WebKitDOMProcessingInstruction* self)
