Source/WebCore/bindings/gobject/WebKitDOMDeprecated.h
@@ -552,31 +552,6 @@ WEBKIT_DEPRECATED gdouble
 webkit_dom_html_media_element_get_initial_time(WebKitDOMHTMLMediaElement* self);
 
 /**
- * webkit_dom_html_head_element_get_profile:
- * @self: A #WebKitDOMHTMLHeadElement
- *
- * This functionality has been removed from WebKit, this function does nothing.
- *
- * Returns: a #gchar
- *
- * Deprecated: 2.4
- */
-WEBKIT_DEPRECATED gchar*
-webkit_dom_html_head_element_get_profile(WebKitDOMHTMLHeadElement* self);
-
-/**
- * webkit_dom_html_head_element_set_profile:
- * @self: A #WebKitDOMHTMLHeadElement
- * @value: A #gchar
- *
- * This functionality has been removed from WebKit, this function does nothing.
- *
- * Deprecated: 2.4
- */
-WEBKIT_DEPRECATED void
-webkit_dom_html_head_element_set_profile(WebKitDOMHTMLHeadElement* self, const gchar* value);
-
-/**
  * webkit_dom_processing_instruction_get_data:
  * @self: A #WebKitDOMProcessingInstruction
  *
